feat: develop endpoint to create an order in mongoDB

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: local-orders-service
+    name: orders-service
   data:
     mongodb:
       uri: mongodb://localhost:27017/orders
