feat: remove orders-service as base URL

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,6 @@ spring:
     name: orders-service
 server:
   servlet:
-    contextPath: /orders-service/api
+    contextPath: /api
   error:
     include-stacktrace: never
